specs/v3/ru/spec/00-introduction.md
# Спецификация opskarta v3

Эта спецификация описывает формат opskarta v3. Он сохраняет базовую модель v2 — разделение структуры работ (`nodes`), календарного планирования (`schedule`) и фактического выполнения (`execution`) — и добавляет операционный слой для живых программ: управленческие карты, короткие Markdown-сводки и более удобные Gantt-срезы.

- Формат сериализации: **YAML** (рекомендовано) или JSON.
- Версионирование: поле `version: 3` в корне документа.
- Идентификаторы узлов: строковые ключи в мапе `nodes:`.

> Статус: **Draft**. v3 — совместимое развитие v2 для операционного ведения сложных изменений.

## Ключевые концепции v3

### Overlay Schedule (наложенное расписание)

Базовый принцип v2 остаётся без изменений: структура работ отделена от календарного планирования.

| Аспект | v2/v3 |
|--------|-------|
| Даты | Только в `schedule.nodes` |
| Календарь | В `schedule.calendars` |
| План без дат | Полностью валиден |
| Зависимости | `deps` в `nodes` |

### Plan Set (многофайловая структура)

План можно разбивать на несколько файлов (фрагментов):

```
project/
├── main.plan.yaml      # meta, statuses
├── nodes.plan.yaml     # nodes
├── schedule.plan.yaml  # schedule
└── views.plan.yaml     # views
```

Фрагменты сливаются в единый **Merged Plan** детерминированным образом.

### Effort (оценка трудозатрат)

Поле `effort` задаёт абстрактную оценку трудозатрат в относительных единицах:

```yaml
nodes:
  epic:
    title: "Авторизация"
    effort: 13  # story points, дни, или другие единицы
```

Единица измерения задаётся в `meta.effort_unit` для отображения в UI.

### Executive overlay (`x.exec`)

v3 стабилизирует практику, которая появилась в реальных rollout-планах: рядом с подробным графом работ нужен короткий управленческий срез. Для этого используется встроенный профиль `x.exec`:

- `blocks` собирают крупные треки поверх обычных `nodes`;
- `target_gate` связывает блок с ближайшей календарной вехой;
- `mgmt.health` и `mgmt.sync_note` фиксируют ручной управленческий сигнал;
- `views` задают executive-карты для разных аудиторий.

## Структура документа

| Файл | Описание |
|------|----------|
| `10-plan-set.md` | Plan Set: многофайловая структура, слияние фрагментов |
| `20-nodes.md` | Узлы: структура работ без календарных полей |
| `30-schedule.md` | Schedule: слой календарного планирования |
| `25-execution.md` | Execution: отслеживание прогресса |
| `35-executive.md` | Executive overlay: управленческие карты и отчёты |
| `40-views.md` | Views: представления для визуализации |
| `45-profiles.md` | Profiles: управление пространствами расширений |
| `50-validation.md` | Валидация: правила и сообщения об ошибках |

## Допустимые top-level блоки

Каждый YAML-файл (фрагмент) может содержать следующие блоки:

| Блок | Описание | Обязательность |
|------|----------|----------------|
| `version` | Версия схемы (должна быть `3`) | Рекомендуется |
| `meta` | Метаданные плана | Опционально |
| `statuses` | Словарь статусов | Опционально |
| `nodes` | Словарь узлов работ | Опционально |
| `schedule` | Слой календарного планирования | Опционально |
| `views` | Представления для визуализации | Опционально |
| `execution` | Оверлей отслеживания выполнения | Опционально |
| `profiles` | Декларации профилей расширений | Опционально |
| `x` | Расширения (namespace для кастомных полей) | Опционально |

Любые другие top-level блоки являются **ошибкой**.

## Минимальный пример

```yaml
version: 3
meta:
  id: demo
  title: "Demo Project"

nodes:
  root:
    title: "Проект"
    kind: summary
```

Этот план валиден без `schedule` — структура работ существует независимо от календарного планирования.

## Полный пример

```yaml
version: 3
meta:
  id: project-x
  title: "Проект X"
  effort_unit: "sp"

statuses:
  not_started: { label: "Не начато", color: "#9ca3af" }
  in_progress: { label: "В работе", color: "#0ea5e9" }
  done: { label: "Готово", color: "#22c55e" }

nodes:
  root:
    title: "Проект X"
    kind: summary
    status: in_progress
  
  phase1:
    title: "Фаза 1: Анализ"
    kind: phase
    parent: root
    effort: 10
  
  phase2:
    title: "Фаза 2: Разработка"
    kind: phase
    parent: root
    deps: [{id: phase1}]
    effort: 20

schedule:
  calendars:
    default:
      excludes:
        - weekends
        - "2024-03-08"
  
  default_calendar: default
  
  nodes:
    phase1:
      start: "2024-03-01"
      duration: "10d"
    
    phase2:
      duration: "20d"
      # start вычисляется из deps

views:
  gantt:
    title: "Диаграмма Ганта"
    where:
      has_schedule: true
```
